# scoreboard-detector

./: .gitignore  convert.py  detect.py  frame_extractor.py  gather.ps1  gather.sh  pyproject.toml  requirements.txt  test.py  train.py  video_retriever.py
data/: Train.txt  Train.txt.backup  Train_abs.txt  data.yaml  val.txt  val.txt.backup  val_abs.txt
data/train/: labels.cache
data/val/: labels.cache
frame_extractor/: CMakeLists.txt  vcpkg.json
frame_extractor/src/: main.cpp
